@@ -50,7 +50,7 @@ Build-Depends:
 # --enable-libgme
  libgme-dev,
 # --enable-gnutls
- libgnutls28-dev [!sparc64] | libgnutls-dev [!sparc64],
+ libgnutls28-dev | libgnutls-dev,
 # --enable-libgsm
  libgsm1-dev,
 # Fails to be detected by configure script, if not also libavc1394-dev is installed.
@@ -66,7 +66,7 @@ Build-Depends:
 # --enable-openal
  libopenal-dev [!sparc64],
 # --enable-libopencv
- libopencv-dev [!m68k !powerpcspe !sh4 !sparc64 !x32],
+ libopencv-dev [!m68k !sh4 !sparc64 !x32],
 # --enable-libopenjpeg
  libopenjpeg-dev,
 # --enable-libopus
@@ -77,13 +77,13 @@ Build-Depends:
 # --enable-libpulse
  libpulse-dev,
 # --enable-librtmp
- librtmp-dev [!sparc64],
+ librtmp-dev,
 # --enable-libschroedinger
  libschroedinger-dev,
 # autodetected: protocol 'sctp'
  libsctp-dev [linux-any],
 # autodetected: SDL support
- libsdl-dev [!x32],
+ libsdl-dev,
 # --enable-libshine
  libshine-dev (>= 3.0.0),
 # --enable-libsoxr
@@ -106,7 +106,7 @@ Build-Depends:
 # --enable-libvorbis
  libvorbis-dev,
 # --enable-libvpx
- libvpx-dev [!x32],
+ libvpx-dev,
 # --enable-libwavpack
  libwavpack-dev,
 # --enable-libwebp
